--- a/template/CV.jrxml
+++ b/template/CV.jrxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.19.1.final using JasperReports Library version 6.19.1-867c00bf88cd4d784d404379d6c05e1b419e8a4c  -->
+<!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="29f4b77f-721b-4bd8-9ee7-033804ee8587">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgresjasper.jrdax"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="DataAdapter.jrdax"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
 		<![CDATA[SELECT id, descript, "linkedin_URL", "Git_URL", "Experience1", "Experience2", "Experience3", "Experience4", "Diplome1", "Description1", "Company1", "Company2", "Company3", "Company4", email, phone, "FirstName", "Lastname"
-	FROM public."createCV_allaboutme";]]>
+	FROM public."createCV_allaboutme" order by id desc]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -122,14 +122,14 @@
 				</graphicElement>
 			</rectangle>
 			<textField>
-				<reportElement x="39" y="4" width="50" height="20" uuid="079140e6-dab7-4c23-8194-fd21739bb9d3"/>
+				<reportElement x="28" y="4" width="118" height="20" uuid="079140e6-dab7-4c23-8194-fd21739bb9d3"/>
 				<textElement textAlignment="Center">
 					<font fontName="Cooper Black" size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FirstName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="90" y="4" width="110" height="20" uuid="c9ae47dd-21b1-4ee0-a36f-02e1520f287e"/>
+				<reportElement x="151" y="4" width="110" height="20" uuid="c9ae47dd-21b1-4ee0-a36f-02e1520f287e"/>
 				<textElement textAlignment="Left">
 					<font fontName="Cooper Black" size="14"/>
 				</textElement>
@@ -225,7 +225,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Justified"/>
-				<textFieldExpression><![CDATA[$F{Experience1}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Experience2}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="41" y="133" width="100" height="30" uuid="6f0fb994-4117-4a25-8305-3bd7ed8db3d5"/>
